<resources>
    <string name="app_name">WeatherApiApp</string>
    <string name="wine_speed">Wine speed</string>
    <string name="feel_like">Feel like</string>
    <string name="humidity">Humidity</string>
    <string name="sun_rise">Sun rise</string>
    <string name="sun_set">Sun set</string>
    <string name="hourly_information">Hourly Information</string>
    <string name="daily_information">Daily Information</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_city">Add new city</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="type_city_name">Type city name</string>
    <string name="add_city">Add City</string>
    <string name="cities_added_previously">Cities added previously</string>
    <string name="no_city_nsaved_yet">No city \nsaved yet</string>
</resources>