<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/dialog_background"
        tools:context=".view.fragment.AddCityDialogFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/add_new_city"
            android:textSize="18sp"
            android:letterSpacing="0"
            android:fontFamily="@font/ubuntu_bold"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#D1D3D5" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/colorPrimaryDark"
            app:hintTextColor="@color/colorPrimaryDark"
            app:boxBackgroundColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cityNameInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/type_city_name"
                android:fontFamily="@font/ubuntu_medium"
                android:textColorHint="@color/colorPrimaryDark"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                android:includeFontPadding="false"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/add"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:letterSpacing="0"
                android:textAllCaps="false"
                android:fontFamily="@font/ubuntu_bold"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:enabled="false"
                android:backgroundTint="@color/colorPrimary" />

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancelButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:letterSpacing="0"
                android:textAllCaps="false"
                android:fontFamily="@font/ubuntu_bold"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:backgroundTint="@android:color/holo_red_dark" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

    </LinearLayout>
</layout>