<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="current"
            type="com.axel.weatherapplibrary.model.Current" />

        <variable
            name="sunrise"
            type="String" />

        <variable
            name="sunset"
            type="String" />

    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#E1009575"
        app:cardElevation="0dp"
        android:layout_margin="5dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/feel_like"
                    android:textSize="15sp"
                    android:fontFamily="@font/ubuntu_light"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:textSize="15sp"
                    android:fontFamily="@font/ubuntu_light"
                    android:textColor="@color/white"
                    app:text="@{current.feelsLike + ` °C`}"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/humidity"
                    android:textSize="15sp"
                    android:fontFamily="@font/ubuntu_light"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:textSize="15sp"
                    android:fontFamily="@font/ubuntu_light"
                    android:textColor="@color/white"
                    app:text="@{current.humidity + ` %`}"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/wine_speed"
                    android:textSize="15sp"
                    android:fontFamily="@font/ubuntu_light"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:textSize="15sp"
                    android:fontFamily="@font/ubuntu_light"
                    android:textColor="@color/white"
                    app:text="@{current.windSpeed + ` km/h`}"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/sun_rise"
                    android:textSize="15sp"
                    android:fontFamily="@font/ubuntu_light"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/sunrise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:textSize="15sp"
                    android:fontFamily="@font/ubuntu_light"
                    android:textColor="@color/white"
                    app:text="@{sunrise}"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/sun_set"
                    android:textSize="15sp"
                    android:fontFamily="@font/ubuntu_light"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/sunset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:textSize="15sp"
                    android:fontFamily="@font/ubuntu_light"
                    android:textColor="@color/white"
                    app:text="@{sunset}"/>

            </RelativeLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</layout>